--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Podcast Generator"
+name: "Cieko Podcast Generator"
 author: "Ray Villalobos"
 description: "Generates a feed for a podcast from a YAML file"
 runs:
